deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
  namespace: backend
spec:
  selector:
    app: flaskapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP # Change this to LoadBalancer or ClusterIP if needed
