deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapp-ingress
  namespace: backend
  annotations: 
    cert-manager.io/cluster-issuer: app-issuer
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: flaskapp.shop  # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskapp-service
            port:
              number: 80
  - host: www.flaskapp.shop  # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskapp-service
            port:
              number: 80
  tls:
    - hosts:
        - www.flaskapp.shop
        - flaskapp.shop
      secretName: flaskapp-shop-tls
